# moyu-ticker

./: .gitignore  README.md  package-lock.json  package.json
docs/superpowers/specs/: 2026-06-28-moyu-stock-ticker-design.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  minute.rs  poll.rs  quote.rs
