[package]
name = "moyu-ticker"
version = "0.1.0"
description = "A-share desktop ticker"
edition = "2021"

[lib]
name = "moyu_ticker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# cargo 二进制名(不能含 +);打包时由 tauri 重命名为 A++
[[bin]]
name = "app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
encoding_rs = "0.8"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
